# SecondYear

./: .gitignore
C++Basics/Lab1/: CMakeLists.txt
C++Basics/Lab10/: CMakeLists.txt
C++Basics/Lab2/: Exercise2.cpp
C++Basics/Lab3/: Exercise1.cpp
C++Basics/Lab5/: CMakeLists.txt  main.cpp
C++Basics/Lab6/: CMakeLists.txt  main.cpp
C++Basics/Lab8/: main.cpp
C++Basics/Lab9/: CMakeLists.txt
C++Basics/lab12/: IntEdit.h
CBasics/Exercise1/: main.c
CBasics/Exercise10/: CMakeLists.txt
CBasics/Exercise14/: CMakeLists.txt
CBasics/Exercise15/: main.c
CBasics/Exercise17/: CMakeLists.txt
CBasics/Exercise18/: CMakeLists.txt
CBasics/Exercise19/: compare.c  main.c  menu.h  reading.c
CBasics/Exercise20/: debug.c  debug.h  main.c
CBasics/Exercise21/: CMakeLists.txt
CBasics/Exercise5/: main.c
CBasics/Exercise6/: main.c
CBasics/Exercise9/: CMakeLists.txt  main.c
CBasics/GradeCalculator/: grade_operations.c  main.c
EmbeddedC++_misc/bitmap&timer/: CMakeLists.txt
EmbeddedC++_misc/ledToggling/: CMakeLists.txt  main.cpp
EmbeddedC++_misc/leds&timers/: CMakeLists.txt
EmbeddedC++_misc/mqttCommunication/: Mqtt_Control.cpp
EmbeddedC++_misc/timer/: main.cpp
EmbeddedC/EepromTraining/: CMakeLists.txt  helpers.c  main.c
EmbeddedC/Steppermotor_Project/: eeprom.c  lorawan.c  pill_dispenser.h  states.c
EmbeddedC/UartTraining/: CMakeLists.txt  main.c  response_handling.c  uart.c  uart.h
SecondYear/C++Basics/Lab1/: Exercise1.cpp  exercise2.cpp
SecondYear/C++Basics/Lab10/: main.cpp
SecondYear/C++Basics/Lab11/: main.cpp
SecondYear/C++Basics/Lab2/: CMakeLists.txt  Exercise1.cpp
SecondYear/C++Basics/Lab3/: Exercise2.cpp
SecondYear/C++Basics/Lab4/: main.cpp
SecondYear/EmbeddedC++_misc/mqttCommunication/: CMakeLists.txt  Initialize.h  Mqtt_Control.h  main.cpp
SecondYear/mqttWebstorm/: index.js  message.json  package.json
mqttWebstorm/: index.html  message.html  package-lock.json
(+49 files in other folders)
